# omnipresent

./: .gitignore  BUGFIX_WINDOWS_UNINSTALL.md  CLAUDE.md  Cargo.toml  PROJECT.md  README.md  RELEASE_NOTES_V0.5.0.md  install.ps1  install.sh
.claude/rules/: constrains.md
.github/workflows/: ci.yml  client-macos.yml  client-windows.yml  release.yml
clients/omni-macos/: .gitignore
clients/omni-macos/omni-macos/: omni_macosApp.swift
clients/omni-macos/omni-macos.xcodeproj/: project.pbxproj
clients/omni-macos/omni-macos.xcodeproj/xcshareddata/xcschemes/: omni-macos.xcscheme
clients/omni-macos/omni-macos/Core/: DaemonViewModel.swift
clients/omni-macos/omni-macos/IPC/: DaemonClient.swift  OmniPaths.swift  OmniProtocol.swift  UnixSocketDaemonClient.swift
clients/omni-macos/omni-macos/Views/: MainView.swift  MenuBarContent.swift
clients/omni-macos/omni-macosTests/: DaemonViewModelTests.swift  OmniPathsTests.swift  ProtocolTests.swift  UnixSocketDaemonClientTests.swift
clients/omni-macos/omni-macosUITests/: omni_macosUITests.swift  omni_macosUITestsLaunchTests.swift
clients/omni-windows/: .gitignore  ANTES_DESPUES.md  ARCHITECTURE.md  COMPONENTS.md  Omni.slnx  PHASE2_SUMMARY.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  STATUS_COMPLETE.md
clients/omni-windows/src/Omni.App/: App.xaml  App.xaml.cs  BoolToVisibilityConverter.cs  MainView.xaml  MainView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Omni.App.csproj  WinUiDispatcher.cs  app.manifest
clients/omni-windows/src/Omni.App.Core/: ConnectionStatus.cs  DaemonViewModel.cs  IUiDispatcher.cs  ObservableObject.cs  Omni.App.Core.csproj
clients/omni-windows/src/Omni.App/Components/: PeerCard.xaml  PeerCard.xaml.cs  PendingRequestCard.xaml  PendingRequestCard.xaml.cs  SessionCard.xaml  SessionCard.xaml.cs
clients/omni-windows/src/Omni.App/Converters/: ValueConverters.cs
clients/omni-windows/src/Omni.App/Views/: ConnectionsView.xaml  ConnectionsView.xaml.cs  GeneralView.xaml  GeneralView.xaml.cs  SystemView.xaml  SystemView.xaml.cs  UpdateView.xaml  UpdateView.xaml.cs
clients/omni-windows/src/Omni.Ipc/: IOmniDaemonClient.cs  OmniDaemonClient.cs  OmniDaemonException.cs  OmniPaths.cs  OmniProtocol.cs
clients/omni-windows/src/Omni.Ipc/Json/: JsonFlatten.cs  OmniEventConverter.cs  OmniJson.cs  OmniResponseConverter.cs
clients/omni-windows/src/Omni.Ipc/Protocol/: Dtos.cs  Events.cs  Requests.cs  Responses.cs
clients/omni-windows/tests/Omni.App.Tests/: DaemonViewModelTests.cs  FakeDaemonClient.cs  Omni.App.Tests.csproj
clients/omni-windows/tests/Omni.Ipc.Tests/: FakeDaemon.cs  Omni.Ipc.Tests.csproj  OmniDaemonClientTests.cs  OmniPathsTests.cs  SerializationTests.cs
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs  update.rs
crates/omni-clipboard/: Cargo.toml
crates/omni-clipboard/src/: adapter.rs  domain.rs  lib.rs  memory.rs  port.rs  service.rs
crates/omni-input/: Cargo.toml
crates/omni-input/src/: diag.rs  lib.rs  memory.rs  port.rs
crates/omni-input/src/linux/: keymap.rs  mod.rs
crates/omni-input/src/macos/: convert.rs  keymap.rs  mod.rs  sink.rs  source.rs
crates/omni-input/src/windows/: keymap.rs  mod.rs  sink.rs  source.rs
crates/omni-protocol/: Cargo.toml
crates/omni-protocol/src/: clipboard.rs  control.rs  ids.rs  input.rs  lib.rs  wire.rs
crates/omni-runtime/: Cargo.toml
crates/omni-runtime/src/: config.rs  daemon.rs  doctor.rs  identity.rs  ipc.rs  ipc_transport.rs  lib.rs  ratelimit.rs  secure.rs  trust.rs
crates/omni-runtime/tests/: daemon.rs
crates/omni-security/: Cargo.toml
crates/omni-security/src/: identity.rs  lib.rs  store.rs  trust.rs
crates/omni-session/: Cargo.toml
crates/omni-session/src/: events.rs  lib.rs  session.rs
crates/omni-topology/: Cargo.toml
crates/omni-topology/src/: geometry.rs  layout.rs  lib.rs  store.rs
crates/omni-transport/: Cargo.toml
crates/omni-transport/src/: channel.rs  endpoint.rs  lib.rs  policy.rs  quic.rs  tls.rs  transport.rs
crates/omni-transport/tests/: quic.rs
docs/: ARCHITECTURE.md  NATIVE_INTEGRATIONS.md  STATUS.md
