[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/JonatanFD/omnipresent"

# Internal crates are referenced through the workspace so versions and paths
# stay defined in exactly one place. Each crate opts in with `*.workspace = true`.
[workspace.dependencies]
# Third-party. Pinned once here so every crate speaks the same versions.
serde = { version = "1.0.228", features = ["derive"] }
# Compact varint binary wire format, stable since 1.0 and built for low-latency
# constrained/networking use — the right fit for input packets over UDP/DTLS.
postcard = { version = "1.1.3", features = ["alloc"] }

# Internal crates.
omni-protocol = { path = "crates/omni-protocol" }
omni-input = { path = "crates/omni-input" }
omni-topology = { path = "crates/omni-topology" }
omni-session = { path = "crates/omni-session" }
omni-security = { path = "crates/omni-security" }
omni-transport = { path = "crates/omni-transport" }
omni-runtime = { path = "crates/omni-runtime" }
