[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/JonatanFD/omnipresent"

# Internal crates are referenced through the workspace so versions and paths
# stay defined in exactly one place. Each crate opts in with `*.workspace = true`.
[workspace.dependencies]
# Third-party. Pinned once here so every crate speaks the same versions.
serde = { version = "1.0.228", features = ["derive"] }
# Compact varint binary wire format, stable since 1.0 and built for low-latency
# constrained/networking use — the right fit for input packets over UDP/DTLS.
postcard = { version = "1.1.3", features = ["alloc"] }
# QUIC (TLS 1.3 over UDP): the secure channel. quinn's defaults select the
# pure-Rust `ring` crypto backend and the tokio runtime.
quinn = "0.11.9"
# Same rustls quinn uses; needed directly for the custom TOFU/allowlist
# certificate verifiers. `ring` keeps the dependency tree free of C crypto.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Self-signed certificate generation for this machine's TLS identity.
rcgen = { version = "0.14.8", default-features = false, features = ["crypto", "ring"] }
# SHA-256 for certificate fingerprints (TOFU pinning).
sha2 = "0.11.0"
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
bytes = "1.11"
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates.
omni-protocol = { path = "crates/omni-protocol" }
omni-input = { path = "crates/omni-input" }
omni-topology = { path = "crates/omni-topology" }
omni-session = { path = "crates/omni-session" }
omni-security = { path = "crates/omni-security" }
omni-transport = { path = "crates/omni-transport" }
omni-runtime = { path = "crates/omni-runtime" }
