[package]
name = "omni-clipboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omni-protocol = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
