[package]
name = "omni-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omni-protocol.workspace = true
omni-input.workspace = true
omni-topology.workspace = true
omni-session.workspace = true
omni-security.workspace = true
omni-transport.workspace = true
